--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 theme: jekyll-theme-dinky
 title: "Arm HPC User Group Workshop @ ISC24"
 description: An ISC 2024 Workshop
-remote_theme: pages-themes/dinky@v0.2.0
+#remote_theme: pages-themes/dinky@v0.2.0
 #github: [metadata]
-plugins:
-- jekyll-remote-theme
+#plugins:
+#- jekyll-remote-theme
 
