--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-dinky
 title: "Arm HPC User Group Workshop @ ISC24"
 description: An ISC 2024 Workshop
-remote_theme: pages-themes/dinky@v0.2.0
-plugins:
-- jekyll-remote-theme
+#remote_theme: pages-themes/dinky@v0.2.0
+#plugins:
+#- jekyll-remote-theme
 
